Alle sider added + update 3

--- a/kontakt.html
+++ b/kontakt.html
@@ -18,7 +18,7 @@
       <nav>
         <ul class="navbar">
           <li><a class="home" href="index.html">Forside</a></li>
-          <li><a class="about" href="ommig.html">Om Mig</a></li>
+          <li><a class="about" href="omgmig.html">Om Mig</a></li>
           <li><a class="portfolio" href="portfolio.html">Portfolio</a></li>
           <li><a class="contact" href="kontakt.html">Kontakt</a></li>
         </ul>
@@ -27,20 +27,17 @@
 
     <main> <!-- Her skal alt mit content være -->
       <section class="presentation">
-        <div class="introduction">
-          <div class="intro-text">
-            <h1>Naja Block Bach</h1>
-            <p>Mit navn er Naja Block Bach.<br>
-              Jeg er Multimediedesigner studerende med stor interesse indenfor grafisk design.
-            </p>
-          </div>
-          <div class="CTA">
-            <button class="knowmore" onclick="location.href='ommig.html'" type="button">Om Mig</button>
-            <button class="my-work" onclick="location.href='portfolio.html'" type="button">Tjek min portfolio</button>
-          </div>
+        <div class="logoimage">
+          <img src="logo.png" alt="logo">
         </div>
-        <div class="cover">
-          <img src="billedeafmig.jpg" alt="billede af mig">
+        <div class="introduction">
+          <div class="contact-text">
+            <h2>Kontakt</h2>
+            <p>Du/I er velkommen til at kontakte mig for yderligere informationer!</p>
+          <div class="mailmobile">
+            <img src="mail.png" alt="mail"><p class="mailinfo">najablock@hotmail.com</p><br>
+            <img src="mobil.png" alt="mobil"><p class="mobileinfo">+45 27 28 86 75</p><br>
+          </div>
         </div>
       </section>
     </main>
