--- a/ommig.html
+++ b/ommig.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, inital-scale=1">
+    <meta name="viewport" content="width=device-width, inital-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
@@ -17,9 +17,10 @@
       </div>
       <nav>
         <ul class="navbar">
-          <li><a class="about" href="#">Om Mig</a></li>
-          <li><a class="portfolio" href="#">Portfolio</a></li>
-          <li><a class="contact" href="#">Kontakt</a></li>
+          <li><a class="home" href="index.html">Forside</a></li>
+          <li><a class="about" href="ommig.html">Om Mig</a></li>
+          <li><a class="portfolio" href="portfolio.html">Portfolio</a></li>
+          <li><a class="contact" href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav>
     </header>
@@ -41,7 +42,7 @@
               I min fritid bruger en jeg del tid foran min computer,
               hvor jeg er en del af gaming-miljøet gennem Counter-Strike: Global Offenssive.
               Udover det, bruger jeg min tid sammen med min kæreste, mine venner og på grafiske opgaver af forskellige art. <br><br>
-              Som person, vil jeg beksrive mig selv som kreativ, loyal, humoristisk og åben for udfordringer.
+              Som person, vil jeg beskrive mig selv som kreativ, loyal, humoristisk og åben for udfordringer.
               Som ansat, vil jeg beskrive mig selv som pligtopfyldende, selvstændig og fokuseret. <br><br>
               Mit mål er at udvikle mig personligt samt professionelt,
               da det betyder meget for mig at forbedre mit arbejde generelt og kunne sætte et bestemt kvalitetsniveau for mine produkter. <br><br>
