--- a/kontakt.html
+++ b/kontakt.html
@@ -35,8 +35,10 @@
             <h2>Kontakt</h2>
             <p>Du/I er velkommen til at kontakte mig for yderligere informationer!</p>
           <div class="mailmobile">
-            <img src="mail.png" alt="mail"><p class="mailinfo">najablock@hotmail.com</p><br>
-            <img src="mobil.png" alt="mobil"><p class="mobileinfo">+45 27 28 86 75</p><br>
+            <img src="mail.png" alt="mail">
+            <p class="mailinfo">najablock@hotmail.com</p><br>
+            <img src="mobil.png" alt="mobil">
+            <p class="mobileinfo">+45 27 28 86 75</p><br>
           </div>
         </div>
       </section>
