Ændring af en énkelt fejl

--- a/kontakt.html
+++ b/kontakt.html
@@ -18,7 +18,7 @@
       <nav>
         <ul class="navbar">
           <li><a class="home" href="index.html">Forside</a></li>
-          <li><a class="about" href="omgmig.html">Om Mig</a></li>
+          <li><a class="about" href="ommig.html">Om Mig</a></li>
           <li><a class="portfolio" href="portfolio.html">Portfolio</a></li>
           <li><a class="contact" href="kontakt.html">Kontakt</a></li>
         </ul>
